@@ -191,6 +191,7 @@ int						// O - TRUE if we handled event
 Fl_File_Input::handle(int event) 		// I - Event
 {
 //  printf("handle(event = %d)\n", event);
+  static char inButtonBar = 0;
 
   switch (event) {
     case FL_MOVE :
@@ -203,18 +204,19 @@ Fl_File_Input::handle(int event) 		// I - Event
       return 1;
 
     case FL_PUSH :
+      inButtonBar = (Fl::event_y() < (y() + DIR_HEIGHT));
     case FL_RELEASE :
     case FL_DRAG :
-      if (Fl::event_y() < (y() + DIR_HEIGHT) || pressed_ >= 0) return handle_button(event);
-
-      return Fl_Input::handle(event);
+      if (inButtonBar) 
+        return handle_button(event);
+      else
+        return Fl_Input::handle(event);
 
     default :
       if (Fl_Input::handle(event)) {
 	damage(FL_DAMAGE_BAR);
 	return 1;
       }
-
       return 0;
   }
 }
